--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-demo",
-  "version": "1.0",
+  "version": "1.1.0",
   "description": "A demo project showing off gulp.js",
   "main": "gulpfile.js",
   "repository": {
@@ -14,5 +14,6 @@
   },
   "homepage": "https://github.com/tjnicolaides/gulp-demo",
   "devDependencies": {
+    "gulp-ruby-sass": "^0.7.1"
   }
 }
