--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "homepage": "https://github.com/tjnicolaides/gulp-demo",
   "devDependencies": {
+    "del": "^0.1.3",
+    "gulp": "^3.8.10",
     "gulp-ruby-sass": "^0.7.1"
   }
 }
