--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "devDependencies": {
     "del": "^0.1.3",
     "gulp": "^3.8.10",
-    "gulp-ruby-sass": "^0.7.1"
+    "gulp-concat": "^2.4.1",
+    "gulp-order": "^1.1.1",
+    "gulp-rename": "^1.2.0",
+    "gulp-ruby-sass": "^0.7.1",
+    "gulp-uglify": "^1.0.1"
   }
 }
