--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "del": "^0.1.3",
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.1",
+    "gulp-jshint": "^1.9.0",
     "gulp-order": "^1.1.1",
     "gulp-rename": "^1.2.0",
     "gulp-ruby-sass": "^0.7.1",
