--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   },
   "homepage": "https://github.com/tjnicolaides/gulp-demo",
   "devDependencies": {
-
+    "gulp-ruby-sass": "^0.7.1"
   }
 }
