--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://github.com/tjnicolaides/gulp-demo",
   "devDependencies": {
+    "del": "^1.0.0",
     "gulp-ruby-sass": "^0.7.1"
   }
 }
