--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "homepage": "https://github.com/tjnicolaides/gulp-demo",
   "devDependencies": {
     "del": "^1.0.0",
-    "gulp-ruby-sass": "^0.7.1"
+    "gulp-concat": "^2.4.2",
+    "gulp-order": "^1.1.1",
+    "gulp-rename": "^1.2.0",
+    "gulp-ruby-sass": "^0.7.1",
+    "gulp-uglify": "^1.0.1"
   }
 }
