--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-order": "^1.1.1",
     "gulp-rename": "^1.2.0",
     "gulp-ruby-sass": "^0.7.1",
+    "gulp-smushit": "0.0.4",
     "gulp-uglify": "^1.0.1"
   }
 }
