--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://github.com/tjnicolaides/gulp-demo",
   "devDependencies": {
+    "browser-sync": "^1.7.2",
     "del": "^1.0.0",
     "gulp-concat": "^2.4.2",
     "gulp-jshint": "^1.9.0",
